    of calling strlen() over and over.  Fix by Frans Meulenbroeks.

  * src/svf/svf_flex.l (fix_yylloc): Accept the string length from caller to
    avoid useless overhead of calling strlen().  Fix by Frans Meulenbroeks.

  * src/svf/svf_flex.l: Use memcpy() rather than strcpy() when we already know
    the length and we just want to dupe the string.

2010-08-26  Mike Frysinger  <vapier@gentoo.org>

  * src/tap/cable/gpio.c: Rewrite to use raw file descriptors when working with
    the gpio value.  Also assume the gpio layer only has a value of '0' or '1'.
    Work by Frans Meulenbroeks.

  * src/tap/cable/gpio.c (gpio_get_value): Replace read/lseek with pread.

2010-08-24  Mike Frysinger  <vapier@gentoo.org>

  * src/tap/cable/gpio.c (gpio_get_value): Need to seek back to the start of
    the gpio file after reading the value so we keep getting up-to-date
    results as reported by Frans Meulenbroeks.

2010-08-19  Mike Frysinger  <vapier@gentoo.org>

  * configure.ac, src/tap/cable_list.h, src/tap/cable/generic_usbconn_list.h,
    src/tap/Makefile.am: Add vsllink cable driver to cable lists.
  * src/tap/cable/vsllink.c: New cable driver by Simon Qian.

  * src/tap/cable/gpio.c (gpio_get_value): Use already cached fp rather than
    constantly re-opening things on the fly.

  * src/tap/cable/vsllink.c (vsllink_init): Fix by Simon Qian for initialization
    of internal state, and proper NUL termination of initial buffer.

2010-08-18  Mike Frysinger  <vapier@gentoo.org>

  * configure.ac (AC_CHECK_FUNCS): Check for _sleep.
  * src/lib/usleep.c: Support a fuzzy version of usleep based on old mingw
    _sleep functions.

2010-08-16  Mike Frysinger  <vapier@gentoo.org>

  * src/tap/detect.c (urj_tap_detect_parts): Include paths to data files when
    issuing "unknown" messages.

  * data/analog/bf518/STEPPINGS: Add bf51x-0.2 stepping.

  * data/MANUFACTURERS: Add another Analog Devices, Inc. entry.
  * data/analog/bf561/STEPPINGS: Add bf561-0.{0,1,4} steppings.
